...
        super.viewDidLoad()
        
        activityIndicator.hidesWhenStopped = true
        imageView.layer.cornerRadius = 20
        
        yesButton.accessibilityIdentifier = "Yes"
        noButton.accessibilityIdentifier = "No"
        counterLabel.accessibilityIdentifier = "Index"
        
        
        alertPresenter = AlertPresenter(view: self)
        presenter = MovieQuizPresenter(viewController: self)
    }
...
