...
    
    private func proceedToNextQuestionOrResults() {
        
        if isLastQuestion() {
            let message = makeResultsMessage()
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: message,
                buttonText: "Сыграть ещё раз",
                correctAnswers: correctAnswers,
                questionsAmount: questionsAmount
            )
            viewController?.show(quiz: viewModel)
...
